# viva-padel

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Trunk.toml  diary.md  docker-compose.yml  index.html  rust-toolchain.toml
client/: .dockerignore  .env.example  App.js  Dockerfile  app.json  package-lock.json  package.json  test_error.txt
client/public/: index.html  manifest.json  service_worker.js
client/src/: config.js
client/src/__tests__/: alarms_persistence.test.js  filters.test.js
client/src/components/: AuthBadge.js  Calendar.js  DebugOverlay.js  FilterBar.js  FloatingRefreshButton.js  RefreshNote.js
client/src/components/Modals/: AvailabilityModal.js  LoginModal.js  LogoutConfirmationModal.js  NotificationActivationModal.js
client/src/screens/: CalendarScreen.js  HomeScreen.js  TimeSlotsScreen.js
client/src/services/: alarmService.js  authService.js  calendarService.js  notificationService.js
client/src/styles/: theme.js
client/src/utils/: alert.js  apiUtils.js  logger.js  storage.js
client/web/: index.html
crates/shared/: Cargo.toml
crates/shared-structs/: Cargo.toml
crates/shared-structs/src/: lib.rs  server_error.rs  server_structs.rs
crates/shared/src/: app_structs.rs  errors.rs  filter.rs  frontend.rs  lib.rs  models.rs  pull_data_from_garden.rs  server_structs.rs  tauri_invokes.rs  testcases.rs  utils.rs
crates/shared/src/frontend/: calendar_ui.rs  utils.rs
crates/shared/src/testcases/: day_planning_testcase.rs
crates/testcases/: Cargo.toml
crates/testcases/data/json_server_responses/plannings/: day (0).json  day (10).json  day (11).json  day (21).json  day (27).json  day (4).json  day (6).json  day (9).json  day(16).json  day(19).json  day(2).json  day(3).json  day(8).json
crates/testcases/data/legarden_server/: day(12).json  day(14).json  day(15).json  day(23).json  day(25).json  day(26).json  day(5).json  simple_day.json  simple_day_all_booked.json
crates/testcases/src/: day_plannings.rs  legarden.rs  lib.rs
crates/testcases/src/day_plannings/: day(1).json  day(13).json  day(17).json  day(18).json  day(20).json  day(22).json  day(24).json  day(28).json  day(7).json  day_0.rs
css/: availaibility_calendar.css
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: main.js  style.css
mobile/: .env.example  App.js  app.json  auth_error.txt  eas.json  google-services.json  package-lock.json  package.json
mobile/src/__tests__/: auth.test.js
mobile/src/components/: AuthBadge.js  Calendar.js  CustomDrawer.js  FilterBar.js  MonthNav.js
mobile/src/components/Modals/: AvailabilityModal.js  BookingModal.js  CreateFilterModal.js  CreationModal.js  LoginModal.js  LogoutConfirmationModal.js
mobile/src/screens/: AlarmsScreen.js  CalendarScreen.js  HomeScreen.js  ReservationsScreen.js  TimeSlotsScreen.js
mobile/src/services/: alarmService.js  authService.js  filterService.js  notificationService.js
mobile/src/styles/: theme.js
mobile/src/utils/: apiUtils.js  filterUtils.js
server/: .gitignore  Cargo.toml  test_output.txt
server/.sqlx/: query-343a1fe44d279e5d59cf8e73fe3b04e08a5e30017de88ab0b0234a1859fe32c1.json  query-5c2f2f950689360655347929d469aa749abb4f5b01197e77a781729336f157ca.json  query-63db4984681271679e45aa41d50c904dec191dc453875eb2ba597dc38fed8ea8.json  query-781000beaf2ce8ae32a48a187954bd0d5b77e4fe3e46eb24897df92d642c3892.json  query-a4133a418fe00ce0ad984fe34f42c93609768b8a0573e677013d9d96b83bb062.json  query-ad560607e585528e9b5a6b63361c92d53c91ce84cae72c13af89d98e93006518.json  query-b70c6fee00bd5c2e20204144ca5d2f69ae273cdc6a7fa06ccf7beda3b9775b0f.json  query-b979c389f8ee59edbe5a3b3c089a7889f49aeddfd31788d833f0d0e2b60b4521.json  query-c348afad68a96e5e928074223f381fde51bc9767c6c348306db58796f64ba580.json  query-c81e0ae83adc9bd943eca926886434414c1671b43bb877b2e378c244bf856c79.json  query-e445fe667739214921b431fab7788869f3bf843133d5ae4bc73178077ee61a34.json
server/migrations/: 20260119144800_initial_schema.sql  20260228163825_create_browsers_table.sql
server/src/: alarm_logic.rs  api.rs  auth.rs  lib.rs  main.rs
server/src/mock/: database.rs  legarden.rs  mod.rs  notifications.rs
server/src/models/: alarm.rs  device.rs  legarden.rs  mod.rs  user.rs
server/src/services/: database.rs  legarden.rs  mod.rs  notifications.rs
server/tests/: api_tests.rs  poll_calendar_tests.rs  server_lifecycle.rs
src/: app.rs  availaibility_calendar.rs  book_court.rs  day_availability.rs  main.rs  views.rs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json5
src-tauri/capabilities/: default.json
src-tauri/src/: filters_commands.rs  lib.rs  local_dev_server_calls.rs  main.rs  server_calls.rs
src-tauri/tests/: parse_json_responses.rs
src-tauri/tests/json_responses/: get_planning.json
src/book_court/: availaibility_calendar.rs  day_availability.rs  filter.rs  filter_builder.rs  next_courts.rs
src/logic/: calendar_ui.rs  tauri_invokes.rs
src/views/book_court/: availaibility_calendar.rs  day_availability.rs  next_courts.rs
tauri_app/: Cargo.toml  index.html
tauri_app/src/: logic.rs  main.rs
tauri_app/src-tauri/src/: filters_commands.rs
tauri_app/src/logic/: tauri_invokes.rs
tauri_app/src/views/: book_court.rs
tauri_app/src/views/book_court/: filter_builder.rs
tauri_app/style/: main.scss
