[package]
name = "viva-padel-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
chrono = { workspace = true }
shared = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri-plugin-fs = "2.0.0-rc.5"

[workspace]
members = [ "crates/shared", "src-tauri"]


[workspace.dependencies]
chrono = "0.4"
shared = { path = "./crates/shared/" }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
