[package]
name = "viva-padel-ui"
version = "0.0.0"
edition = "2021"

[dependencies]
leptos = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = "0.3"
serde-wasm-bindgen = { workspace = true }
console_error_panic_hook = "0.1.7"
chrono = { workspace = true }
shared = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thaw = { version = "0.3.4", features = ["csr"] }
leptos_router = { version = "0.6.15", features = ["csr"] }

[workspace]
members = [ "crates/shared", "crates/testcases", "src-tauri"]

[workspace.dependencies]
leptos = { version = "0.6", features = ["csr"] }
chrono = "0.4"
shared = { path = "./crates/shared/" }
testcases = { path = "./crates/testcases/" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
tauri-plugin-store = "2.0.0"

