[package]
name = "viva-padel-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = { workspace = true }
shared = { workspace = true, default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true}

[features]
default = ["local_dev"]
local_dev = ["shared/default"]
