[package]
name = "viva-padel-server"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = { workspace = true, features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid", "chrono", "macros"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"]}
uuid = { version = "1.11", features = ["v4", "serde"] }
testcases = { workspace= true, optional = true }
dotenvy = "0.15"
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
async-trait = "0.1.89"
reqwest = { workspace = true }
thiserror = "2.0"
validator = { version = "0.20", features = ["derive"] }
axum-test = { version = "*", optional = true }


[features]
default = ["local_dev"]
local_dev = ["axum-test", "testcases"]

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
