[package]
name = "viva-padel"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "viva_padel_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
shared = { workspace = true }
async-std = { version = "1", optional = true }

[local]

[features]
default = ["local_dev"]
# default = []
prod = []
local_dev = ["async-std"]
