[package]
name = "viva-padel"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "viva_padel_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = ["config-json5"] }

[dependencies]
tauri = { version = "2.0.0", features = ["config-json5"] }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
shared = { workspace = true }
async-std = { version = "1", optional = true }
testcases = { workspace = true, optional = true }
tauri-plugin-store = "2.0.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }


[features]
default = ["local_dev"]
# default = []
prod = []
local_dev = ["async-std", "testcases"]

