[package]
name = "viva-padel-ui"
version = "0.0.1"
edition = "2021"

[dependencies]
leptos = { workspace = true }
tracing =  "0.1"
tracing-subscriber = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = "0.3"
serde-wasm-bindgen = { workspace = true }
console_error_panic_hook = "0.1.7"
chrono = { workspace = true }
shared = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thaw = { version = "0.3.4", features = ["csr"] }
leptos_router = { version = "0.6.15", features = ["csr"] }
tracing-wasm = "0.2.1"
