[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
leptos = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = {workspace = true }
wasm-bindgen-futures = { workspace = true }
testcases = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }


[features]
default = ["local_dev"]
local_dev = ["testcases"]
